fixed alignment in navbar

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -19,7 +19,7 @@ html {
 
 body {
   background: $background-primary;
-  font-size: 1.6rem;
+  font-size: 1.4rem;
   font-family: "Roboto", sans-serif;
 }
 
@@ -108,10 +108,18 @@ header {
 main {
   margin-top: 15rem;
 
+  @media (max-width: 768px) {
+    margin-top: 12rem;
+  }
+
   .container {
     color: $white;
     width: 80%;
     margin: 2rem auto;
+
+    @media (max-width: 768px) {
+      width: 90%;
+    }
 
     //   Introduction
 
@@ -162,7 +170,6 @@ main {
         border-radius: 0.25rem;
         outline: none;
         transition: all 250ms ease 0s;
-
 
         &:hover {
           background: $primary-40;
